# ProgettoAI

./: README.md  domain.pddl  domain2.pddl  instance1.pddl  problem.pddl  test.pddl
myproject/: IMAStar.java  IMHeuristic.java  IMPlanner.java  PlannerConfiguration.java
myproject/benchmark/: domain.pddl  domain2.pddl
myproject/benchmark/problems/: instance2.pddl  instance22.pddl  p01.pddl  p02.pddl  p03.pddl  p04.pddl  p06.pddl
myproject/benchmark/statistics/: instance2.pddl.txt  instance22.pddl.txt  p01.pddl.txt  p03.pddl.txt  (+2 more)
punto1/: README.md  domain.pddl  domain0.pddl
punto1/plans/: instance1.pddl.plan  instance2.pddl.plan  p01.pddl.plan  p02.pddl.plan  p03.pddl.plan  p04.pddl.plan  p05.pddl.plan
punto1/problems/: instance1.pddl  instance1.pddl.plan  instance2.pddl  p01.pddl  p02.pddl  p03.pddl  p05.pddl
punto1/stats/: p05.txt
punto2/: IMAStar.java  IMHeuristic.java  IMPlanner.java  README.md
punto2/benchmark/: domain.pddl
punto3/: CMakeLists.txt  README.md  instance2_durative.pddl  instance2_durative.pddl.plan
punto3/3.2d/src/project_ai/: CMakeLists.txt
punto3/3.2d/src/project_ai/launch/: commands.txt  plan.txt
punto3/3.2d/src/project_ai/pddl/: domain_durative.pddl
punto3/3.2d/src/project_ai/src/: deliver_action.cpp  empty_action.cpp  fill_action.cpp  move_action.cpp  pickup_action.cpp
punto3/install/: local_setup.sh  setup.sh
punto3/launch/: commands.txt  launch.py  plan.txt  planquality.txt
punto3/log/: latest_build
punto3/pddl/: domain_durative.pddl
punto3/src/: deliver_action.cpp  empty_action.cpp  fill_action.cpp
(+111 files in other folders)
